--- a/package.json
+++ b/package.json
@@ -27,16 +27,22 @@
     "fumadocs-ui": "^15.6.9",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "pagefind": "^1.3.0",
