--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "tsx scripts/merge-snippets.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -47,6 +48,7 @@
     "eslint-config-next": "15.4.5",
     "pagefind": "^1.3.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
