--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "next": "15.4.5",
     "radix-ui": "^1.4.3",
     "react": "^19.1.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.6.6",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1"
   },
